using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorParams
{
    public static int SPEED_PARAM = Animator.StringToHash("speed");
    public static int HASBOMB_PARAM = Animator.StringToHash("hasBomb");
    public static int SHOOT_PARAM = Animator.StringToHash("shoot");
    public static int DROP_PARAM = Animator.StringToHash("drop");
    public static int THROW_PARAM = Animator.StringToHash("throw");
    public static int DIE_PARAM = Animator.StringToHash("die");
}
